<resources>
    <string name="app_name">Sarco Pixel</string>
    <string name="username">Admission Number</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="combination">Combination</string>
    <string name="todo">TODO</string>
    <string name="sQuote"> Sarco Pixel is a digital Photo Album App, designed to help students especially Sa\'adatu rimi college of Education students to keep track of their friends record even if they are far apart. </string>
    <string name="letsGo">Get Started     > </string>
    <string name="version">Version 1.0</string>
    <string name="quotes">"When i say: í miss school, i mean my friends and the fun. Not the studying part."</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="back">Back</string>
    <string name="login">LogIn</string>
    <string name="home">Home</string>
    <string name="dialogText">We have sent Verification link to your Email, Kindly check and reset your password</string>
    <string name="csc_che">Computer/Chemistry</string>
    <string name="done">Complete</string>
    <string name="fillAdm">csc/01/19/</string>
    <string name="signUpDesc">Kindly register to have full access.</string>
    <string name="photoAlbum">Photo Album</string>
    <string name="friendsList">Friends List</string>
    <string name="profileAdm">Profile</string>
    <string name="information">personal Information</string>
    <string name="yourName">Name:</string>
    <string name="admNo">Adm. Number:</string>
    <string name="comb">Combination:</string>
    <string name="emailAddress">Email:</string>
    <string name="yourPhoneNumber">Phone Number:</string>
    <string name="yourComment">Comment:</string>
    <string name="profileEdit">Edit Profile</string>
    <string name="startChat">Select your friend here to start a conversation.</string>
    <string name="chats">Chats</string>
    <string name="newChat">New Chat</string>
    <string name="noChats">No More Chats</string>
    <string name="search">Search your friends here</string>
    <string name="classOf2023">computer science/chemistry \n class of 2023</string>
    <string name="album">Album</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="connect">Let\'s Connect!</string>
    <string name="goal">The goal of my latest endeavor, Sarco Pixel, is to empower students by providing them with a seamless platform to connect with their friends no matter where they are. As a firm believer in the power of technology to enhance communication and collaboration, I\'ve dedicated myself to developing an app that revolutionizes the way students stay connected.</string>
    <string name="aboutMe">Hi there, I\'m Adam Zakariyya, a passionate mobile app developer with over 2 years of experience in crafting intuitive and impactful applications. My journey in the world of mobile development has been nothing short of exhilarating, fueled by my unwavering passion for creating innovative solutions that make a difference.</string>
    <string name="welcome">Welcome To Sarco Pixel</string>
    <string name="library">Develop your Knowledge with mobile library.</string>
    <string name="community">Join the Community to get help from classmates.</string>
    <string name="story"> School stories, educational and related Stories.  </string>
    <string name="officials">Advise, Suggestions and FAQs from developers.</string>
    <string name="practice">Coding Space. A practical Approach to boost your Skills.</string>
    <string name="subWelcome">Welcome to Sarco pixel the No:.1 Photo Album App</string>
    <string name="explore">-[ Explore More.. ]-</string>
    <string name="leaders">-[ Our Leaders ]-</string>
    <string name="provost">Provost</string>
    <string name="Dean">Dean Sci.</string>
    <string name="hod">H. O. D</string>
    <string name="levelC">Level Co.</string>
    <string name="register">Register here</string>
    <string name="signUp">Hi there, SignUp</string>
    <string name="registerBtn">Register</string>
    <string name="name">Adamu Ibrahim Yau</string>
    <string name="sarcoPixel">Sarco Pixel</string>
    <string name="getStarted">Get Started ></string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email">Email Address</string>
    <string name="next">Continue</string>
    <string name="changePassNote">You Can Now Change your Password, we recommend to use a strong password.</string>
    <string name="forgetPassNote">Forgot Your Password? No worry, be calm we will help you to recover your Account.</string>
    <string name="remember">Remember Your Password?</string>
    <string name="haveAccount">Already Have An Account?</string>
    <string name="CreatePass">Create Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="SerialNo">Serial No:</string>
    <string name="comment">Comment</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="code">Enter the Code</string>
    <string name="finish">Finish</string>
    <string name="verify">Verify</string>
    <string name="sRimi_one">Sa\'adatu Rimi College of Education, Kumbotso,was established in 1981 by the Kano State government, originally known as Advanced Teacher\'s College, Waje,its was initially located at Pilgrims Camp and was renamed College of Education, Kumbotso, in 1982.</string>
    <string name="newPassword">New Password</string>
    <string name="codeSent">We have sent a verification code to your email Address, copy the code and paste it here.</string>
    <string name="forgotPage">Password Recovery</string>
    <string name="welcome_note">your photo Album is your school memory, the easiest way to get connected with your school mates. yeh!! We Solved it!, you can access it everywhere.</string>
    <string name="memories">Memories, Chat With Friends.</string>
    <string name="noAccount">Don\'t Have an Account?</string>
    <string name="developBy">Developed by: Adamweb</string>
    <string name="sarcoName">ARCO PIXEL</string>
    <string name="skip">x skip</string>
    <string name="send_sms">Send SMS Message</string>
    <string name="send_email">Send Email Message</string>
    <string name="loading">please wait....</string>
</resources>