<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE4D0"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".NextSignUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:fontFamily="@font/suez_one"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/username"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/phoneNumber"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/SerialNo"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/comment"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="62dp"
            app:cornerRadius="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/suez_one"
            android:text="@string/signup"
            android:textSize="20sp"
            android:backgroundTint="#0D1F82"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/haveAccount"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/amaranth_bold"/>

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="@font/suez_one"
            android:textColor="#0D1F82"/>


    </LinearLayout>
</LinearLayout>