<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE4D0"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:fontFamily="@font/suez_one"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/fName"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/lName"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="clear_text"
            android:hint="@string/email"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="password_toggle"
            android:hint="@string/CreatePass"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="3dp"
            android:layout_marginTop="15dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="password_toggle"
            android:hint="@string/confirmPass"
            app:hintTextColor="#0D1F82"
            android:textColorHint="#0D1F82"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="62dp"
            app:cornerRadius="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/suez_one"
            android:text="@string/next"
            android:textSize="20sp"
            android:backgroundTint="#0D1F82"/>
    </LinearLayout>
</LinearLayout>