<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FriendsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#0D1F82"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/suez_one"
            android:text="@string/friendsList"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/user_profile_dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toEndOf="@+id/backArrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:paddingTop="20dp">


         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:gravity="center">
             <EditText
                 android:id="@+id/search_your_friends_field"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:hint="@string/search"
                 android:background="@drawable/search_friends_bg"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:layout_marginTop="1dp"
                 android:fontFamily="@font/alata"
                 android:textColor="@color/purple_500"
                 android:drawableStart="@drawable/user_profile_icon"
                 android:drawablePadding="10dp"
                 android:inputType="text"
                 android:autofillHints="username" />

             <ImageView
                 android:id="@+id/searchBtn"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
                 android:padding="5dp"
                 android:layout_toEndOf="@id/search_your_friends_field"
                 android:src="@drawable/search_icon"
                 android:background="@drawable/search_button_bg"
                 android:contentDescription="@string/todo"/>
         </RelativeLayout>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/startChat"
             android:layout_marginTop="10dp"
             android:textSize="13sp"
             android:fontFamily="@font/suez_one"
             android:textColor="#0D1F82"
             android:textAlignment="center"/>
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friendListRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>